# tauri-vite-template

./: .gitignore  README.md  package.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
app/: App.tsx  main.tsx
service/: Cargo.toml  tauri.conf.json
service/src/: main.rs
