[package]
name = "tauri-vite-template"
version = "0.1.0"
description = "Tauri Vite Template"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri         = { version = "2", features = [] }
tauri-plugin-shell = { version = "2" }

serde         = { version = "1", features = ["derive"] }
serde_json    = { version = "1" }

tokio         = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

rand          = { version = "0.9" }

log           = { version = "0.4" }
env_logger    = { version = "0.11" }

[features]
default        = ["mock"]
mock           = []

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
